--- a/docs/index.Rmd
+++ b/docs/index.Rmd
@@ -8,18 +8,18 @@ output: html_document
 <img src="../assets/logo.png" width="200">
 
 
-This page provides documentation for the ***Master Concordance File***, the rosetta stone needed to convert IRS 990 E-Filer XML documents [on AWS](https://aws.amazon.com/public-datasets/irs-990/) into structured databases.
+This page provides documentation for the ***Master Concordance File***, the "rosetta stone" that facilitates the conversion of IRS 990 E-Filer XML documents [on AWS](https://aws.amazon.com/public-datasets/irs-990/) into structured databases.
 
-The data dictionary below describes fields in the Master Concordance File. Click here for a [DATA DICTIONARY](data_dictionary.html) describing all variables on the 990 forms.
+The data dictionary below documents the xpath to variable mapping contained in the Master Concordance File. Click here for a [DATA DICTIONARY](data_dictionary.html) describing unique variables on the 990 forms.
 
-Submit [QUESTIONS AND ISSUES](https://github.com/Nonprofit-Open-Data-Collective/irs-efile-master-concordance-file/issues/new) through GitHub.
+Please submit [QUESTIONS AND ISSUES](https://github.com/Nonprofit-Open-Data-Collective/irs-efile-master-concordance-file/issues/new) through GitHub.
 
 
 #### Acknowledgements
 
 *Created by the [Nonprofit Open Data Collective](https://nonprofit-open-data-collective.github.io/) under the [GPL-3.0](https://opensource.org/licenses/GPL-3.0) open source license for free use by all*.
 
-Many thanks to all of those that have helped generate this file, but especially to the Aspen Institute for hosting the initial ["DATATHON"](https://www.aspeninstitute.org/blog-posts/aspen-institutes-program-philanthropy-social-innovation-psi-hosts-nonprofit-datathon/)event which kicked us off, and to Miguel Barbosa at Citizen Audit for volunteering a week's worth of time to generate a large portion of the first draft of this file. 
+Many thanks to all of those that have helped generate this file, but especially to the Aspen Institute for hosting the initial ["DATATHON"](https://www.aspeninstitute.org/blog-posts/aspen-institutes-program-philanthropy-social-innovation-psi-hosts-nonprofit-datathon/)event which kicked us off, and to Miguel Barbosa at Citizen Audit for generating a large portion of the first draft of this file. 
 
 
 
