--- a/docs/data_dictionary.Rmd
+++ b/docs/data_dictionary.Rmd
@@ -24,8 +24,7 @@ Each two-character code indicates the FORM, SCOPE, and LOCATION of the variable.
 **FORM** (see below for more info):  
 * F9 - Variable occurs on Form 990, 990-EZ, or 990-PF  
 * SA through SR - Variable occurs on Schedule A to Schedule R  
-* 3-character codes followed by a PF scope indicate auxillary scheduled for foundations
-* AF - Auxillary schedule for PF filers
+* AF - Auxillary schedule for PF filers  
 
 
 **LOCATION** - two digit code indicating the PART of the 990 form, or groups of variables.
@@ -35,7 +34,7 @@ Each two-character code indicates the FORM, SCOPE, and LOCATION of the variable.
 * Etc. 
 
 **SCOPE**  
-* SB - Header and signature block variables that are identical across PC, EZ, and PF forms  
+* HD - Header and signature block variables that are identical across PC, EZ, and PF forms  
 * PC - Variable relevant ONLY to full form 990 nonprofit filers  
 * EZ - Variable relevant ONLY to 990-EZ nonprofit filers  
 * PZ - Variable relevant to BOTH full 990 and 990-EZ nonprofit filers  
@@ -57,7 +56,9 @@ Variable with SB scope occur either in the header or signature block on all of t
 
 
 
-## Variable Groups ("parts")
+## Variable Groups ("PARTS")
+
+The 990 Forms and Schedules are divided into PARTS, which organize the fields by themes. They are listed below.
 
 *These groups are based upon the [2016 IRS 990 Forms and Schedules](https://github.com/Nonprofit-Open-Data-Collective/irs-efile-master-concordance-file/tree/master/990_forms).*
 
@@ -322,7 +323,9 @@ Complete if the organization answered “Yes” on Form 990, Part IV, line 23
 
 ```{r, echo=F, results='asis'}
 
-dat <- read.csv( "../CONCORDANCE_V1.csv" )
+dat <- read.csv( "../efiler_master_concordance.csv" )
+
+names( dat ) <- toupper( names( dat ) )
 
 d2 <- dat[ c("VARIABLE_NAME","SCOPE","DESCRIPTION","LOCATION_CODE") ]
 
@@ -350,7 +353,7 @@ margin: 0 0 20px 0;
 
 td {
     padding: 3px 10px 3px 10px;
-    text-align: center;
+    text-align: left;
 }
 
 table
@@ -364,6 +367,9 @@ table
 h1, h2{
   margin-top:100px;
   margin-bottom:20px;
+  font-family: "Century Gothic";
+  font-size: 40px;
+  text-transform: uppercase;
 }
 
 
